apps/base/obsidian-livesync/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couchdb
  namespace: obsidian-livesync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchdb
  template:
    metadata:
      labels:
        app: couchdb
    spec:
      containers:
        - name: couchdb
          image: couchdb:3.5.0
          ports:
            - containerPort: 5984
          volumeMounts:
            - name: data
              mountPath: /opt/couchdb/data
            - name: config
              mountPath: /opt/couchdb/etc/local.ini
              subPath: local.ini
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: couchdb-data
        - name: config
          configMap:
            name: couchdb-config
