apps/base/obsidian-livesync/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchdb-service
  namespace: obsidian-livesync
spec:
  type: ClusterIP
  selector:
    app: couchdb
  ports:
  - port: 80
    targetPort: 5984
