apps/base/obsidian-livesync/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: couchdb-route
  namespace: obsidian-livesync
spec:
  hostnames:
    - obsidian-livesync.relyq.dev
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: couchdb-service
          kind: Service
          port: 80
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: Access-Control-Allow-Methods
                value: GET,PUT,POST,HEAD,DELETE
              - name: Access-Control-Allow-Headers
                value: accept,authorization,content-type,origin,referer
              - name: Access-Control-Allow-Origin
                value: app://obsidian.md,capacitor://localhost,http://localhost
              - name: Access-Control-Max-Age
                value: "3600"
              - name: Access-Control-Allow-Credentials
                value: "true"
              - name: Vary
                value: Origin
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
